六界面布局

--- a/chongwudaily/project.config.json
+++ b/chongwudaily/project.config.json
@@ -43,13 +43,33 @@
 		"game": {
 			"list": []
 		},
+		"gamePlugin": {
+			"current": -1,
+			"list": []
+		},
 		"miniprogram": {
 			"current": 0,
 			"list": [
 				{
+					"id": 0,
+					"name": "pages/meirong/meirong",
+					"pathName": "pages/meirong/meirong",
+					"query": "",
+					"scene": null
+				},
+				{
 					"id": -1,
-					"name": "db guide",
-					"pathName": "pages/databaseGuide/databaseGuide"
+					"name": "pages/tianjia/tianjia",
+					"pathName": "pages/tianjia/tianjia",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/home/home",
+					"pathName": "pages/home/home",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
