--- a/chongwudaily/miniprogram/app.json
+++ b/chongwudaily/miniprogram/app.json
@@ -1,15 +1,48 @@
 {
+  "usingComponents": {
+    "van-uploader": "@vant/weapp/uploader/index",
+    "van-field": "@vant/weapp//field/index",
+    "van-cell": "@vant/weapp/cell/index",
+    "van-popup": "@vant/weapp/popup/index",
+    "van-switch": "@vant/weapp/switch/index",
+    "van-picker": "@vant/weapp/picker/index",
+    "van-datetime-picker": "@vant/weapp/datetime-picker/index"
+  },
   "pages": [
+    "pages/home/home",
     "pages/tianjia/tianjia",
-    "pages/home/home"
-    
+    "pages/yimiao/yimiao",
+    "pages/quchong/quchong",
+    "pages/tijian/tijian",
+    "pages/xizao/xizao",
+    "pages/meirong/meirong",
+    "pages/yaoyu/yaoyu"
   ],
   "window": {
-    "backgroundColor": "#F6F6F6",
+    "backgroundColor": "#ffffff",
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#F6F6F6",
+    "navigationBarBackgroundColor": "#ffffff",
     "navigationBarTitleText": "宠物日记",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "borderStyle": "white",
+    "selectedColor": "#5483a0",
+    "backgroundColor": "#ffffff",
+    "list": [
+      {
+        "pagePath": "pages/home/home",
+        "iconPath": "./img/zhuye1.png",
+        "selectedIconPath": "./img/zhuye2.png",
+        "text": "主页"
+      },
+      {
+        "pagePath": "pages/tianjia/tianjia",
+        "iconPath": "./img/dangan1.png",
+        "selectedIconPath": "./img/dangan2.png",
+        "text": "档案"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json"
 }
