--- a/chongwudaily/project.config.json
+++ b/chongwudaily/project.config.json
@@ -48,7 +48,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -69,6 +69,26 @@
 					"name": "pages/home/home",
 					"pathName": "pages/home/home",
 					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/dangan/dangan",
+					"pathName": "pages/dangan/dangan",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/tianjia/tianjia",
+					"pathName": "pages/tianjia/tianjia",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/yimiao/yimiao",
+					"pathName": "pages/yimiao/yimiao",
 					"scene": null
 				}
 			]
