--- a/chongwudaily/miniprogram/app.json
+++ b/chongwudaily/miniprogram/app.json
@@ -10,7 +10,8 @@
     "van-index-bar": "@vant/weapp/index-bar/index",
     "van-index-anchor": "@vant/weapp/index-anchor/index",
     "van-button": "@vant/weapp/button/index",
-    "van-icon": "@vant/weapp/icon/index"
+    "van-icon": "@vant/weapp/icon/index",
+    "van-panel": "@vant/weapp/panel/index"
   },
   "pages": [
     "pages/home/home",
@@ -22,7 +23,8 @@
     "pages/meirong/meirong",
     "pages/yaoyu/yaoyu",
     "pages/dangan/dangan",
-    "pages/bianji_dang/bianji_dang"
+    "pages/bianji_dang/bianji_dang",
+    "pages/yimiao_note/yimiao_note"
   ],
   "window": {
     "backgroundColor": "#ffffff",
