--- a/chongwudaily/project.config.json
+++ b/chongwudaily/project.config.json
@@ -96,6 +96,13 @@
 					"id": -1,
 					"name": "pages/bianji_dang/bianji_dang",
 					"pathName": "pages/bianji_dang/bianji_dang",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/yimiao_note/yimiao_note",
+					"pathName": "pages/yimiao_note/yimiao_note",
 					"scene": null
 				}
 			]
