--- a/chongwudaily/miniprogram/app.json
+++ b/chongwudaily/miniprogram/app.json
@@ -11,7 +11,8 @@
     "van-index-anchor": "@vant/weapp/index-anchor/index",
     "van-button": "@vant/weapp/button/index",
     "van-icon": "@vant/weapp/icon/index",
-    "van-count-down": "@vant/weapp/count-down/index"
+    "van-count-down": "@vant/weapp/count-down/index",
+    "van-dialog": "@vant/weapp/dialog/index"
   },
   "pages": [
     "pages/home/home",
